@@ -60,6 +60,8 @@ Access:
  * Improvements on DVB scanning
  * BluRay module can open ISO over network and has full BD-J support
  * Support for DVD ISO over network
+ * New cloudstorage access module using libcloudstorage supporting cloud
+   services, such as Google Drive, Dropbox and others
 
 Decoder:
  * OMX GPU-zerocopy support for decoding and display on Android using OpenMax IL
